--- a/index.html
+++ b/index.html
@@ -3,16 +3,41 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <meta name="google-site-verification" content="v04hNk8tIx3d9CUk6GblBSturOPgddWDdKma1nSpvVw" />
+    <link rel="icon" type="image/svg+xml" href="https://telebots.site/public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TeleBots</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
+    <title>Телеграм боти, чат-боти, сайти, парсери, інтернет магазини</title>
+    <meta name="description" content="Розробляємо зручні та ефективні Телеграм боти, які допоможуть автоматизувати ваш бізнес, спростити роботу з клієнтами та налаштувати швидкі автовідповіді." />
+    <meta name="keywords" content="Телеграм боти, автоматизація, автовідповіді, чат-боти, сайти, парсери, боти, бізнес-автоматизація, Telegram, чат-боти для бізнесу, автоматизація бізнесу, Telegram боти, лендінги, скрипти, чат бот, телеграм бот, розробка телеграм ботів, разработка телеграмм ботов, заказать телеграмм бот, замовити телеграм бот, телеграмм бот разработчик, телеграм бот розробник, купити телеграм бот, купить телеграмм бот, телеграм боти, чат боти, телеграмм боты, чат боты">
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Роман" />
+    <meta name="copyright" content="Телеграм боти" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="distribution" content="global" />
+    <meta name="rating" content="general" />
+    <meta name="language" content="uk" />
+
+    <!-- Open Graph tags for image preview -->
+    <meta property="og:title" content="Телеграм боти, чат-боти, сайти, парсери, інтернет магазини" />
+    <meta name="description" content="Розробляємо зручні та ефективні Телеграм боти, які допоможуть автоматизувати ваш бізнес, спростити роботу з клієнтами та налаштувати швидкі автовідповіді." />
+    <meta property="og:image" content="https://telebots.site/public/about.jpg" />
+    <!-- Replace with the actual path to your image -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://telebots.site" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7YWVBBJP8X"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-7YWVBBJP8X');
+    </script>
 </head>
 
 <body class="bg-white">
