--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://telebots.site" />
 
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&display=swap">
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7YWVBBJP8X"></script>
