Ваше повідомлення про зміни

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="google-site-verification" content="v04hNk8tIx3d9CUk6GblBSturOPgddWDdKma1nSpvVw" />
-    <link rel="icon" type="image/svg+xml" href="https://telebots.site/public/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="https://telebots.site/public/logologo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Телеграм боти, чат-боти, сайти, парсери, інтернет магазини</title>
-    <meta name="description" content="Розробляємо зручні та ефективні Телеграм боти, які допоможуть автоматизувати ваш бізнес, спростити роботу з клієнтами та налаштувати швидкі автовідповіді." />
+    <title>Розробка Телеграм ботів, чат-ботів, сайтів, парсерів, інтернет магазинів, ботів з ші</title>
+    <meta name="description" content="Розробка Телеграм ботів, які допоможуть автоматизувати ваш бізнес, спростити роботу з клієнтами та налаштувати швидкі автовідповіді." />
     <meta name="keywords" content="Телеграм боти, автоматизація, автовідповіді, чат-боти, сайти, парсери, боти, бізнес-автоматизація, Telegram, чат-боти для бізнесу, автоматизація бізнесу, Telegram боти, лендінги, скрипти, чат бот, телеграм бот, розробка телеграм ботів, разработка телеграмм ботов, заказать телеграмм бот, замовити телеграм бот, телеграмм бот разработчик, телеграм бот розробник, купити телеграм бот, купить телеграмм бот, телеграм боти, чат боти, телеграмм боты, чат боты">
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Роман" />
@@ -43,6 +43,10 @@
 
         gtag('config', 'G-7YWVBBJP8X');
     </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body class="bg-white">
